<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color3"
    tools:context="com.prakpapb2.intro1.Beranda">

    <Button
        android:id="@+id/button_kemerdekaan_nasional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:width="346dp"
        android:height="75dp"
        android:background="@drawable/button"
        android:fontFamily="@font/poppins"
        android:text="@string/kemerdekaan_nasional"
        android:textAllCaps="false"
        android:textColor="#A6000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/button_kebangkitan_nasional"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="346dp"
        android:height="75dp"
        android:background="@drawable/button"
        android:text="@string/kebangkitan_nasional"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_kemerdekaan_nasional"
        tools:ignore="MissingConstraints"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:textColor="#A6000000"/>

    <Button
        android:id="@+id/button_revolusi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="346dp"
        android:height="75dp"
        android:background="@drawable/button"
        android:text="@string/revolusi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_kebangkitan_nasional"
        tools:ignore="MissingConstraints"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:textColor="#A6000000"/>

    <Button
        android:id="@+id/button_emansipasi_wanita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:width="346dp"
        android:height="75dp"
        android:background="@drawable/button"
        android:text="@string/emansipasi_wanita"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_revolusi"
        tools:ignore="MissingConstraints"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins"
        android:textSize="16sp"
        android:textColor="#A6000000"/>

    <FrameLayout
        android:id="@+id/container_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_navigation_menu"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>